--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
+    "formik": "^2.2.9",
     "museo": "^0.1.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
